--- a/movie-app/src/App.css
+++ b/movie-app/src/App.css
@@ -15,6 +15,11 @@ body {
 	background-color: aquamarine;
 }
 
+.results-title {
+	padding: 1em;
+	text-align: center;
+}
+
 .show-results-movies {
 	justify-content: center;
 	display: flex;
